<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/insertCalendarLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/calendarNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="400dp"
            android:padding="8dp"
            android:hint="@string/calendar_name"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/calendarUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="400dp"
            android:padding="8dp"
            android:hint="@string/calendar_url"
            android:inputType="textUri"
            app:layout_constraintTop_toBottomOf="@id/calendarNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/cancelCreating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/calendarUrlEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/saveCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/calendarUrlEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>