<resources>
    <string name="app_name">ICalReader</string>
    <string name="calendar_name">Calendar name</string>
    <string name="calendar_url">Calendar URL</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="title_activity_numbers_api">NumbersApiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
