<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="80dp">

    <TextView
            android:id="@+id/calendarNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="exampleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

    <Button
            android:id="@+id/deleteCalendarButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:drawable/ic_delete"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
